Add partials and destroy method

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,6 +8,6 @@
 
 <body>
   <p>Some text here</p>
-  <%= link_to 'About', about_path %>
+  <%= link_to "Alpha Blog", articles_path %> | <%= link_to 'About', about_path %>
 </body>
 </html>
