--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,4 @@
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-
-  <title>The HTML5 Herald</title>
-  <h1>This is the homepage</h1>
-</head>
-
-<body>
-  <p>Some text here</p>
-  <%= link_to "Alpha Blog", articles_path %> | <%= link_to 'About', about_path %>
-</body>
-</html>
+<div class="center jumbotron">
+<h1>ALPHA BLOG</h1>
+<%= link_to "Sign up now", "#", class: "btn btn-primary btn-lg btn-xlarge" %>
+</div>
