--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -66,7 +66,6 @@ $navbar-default-bg: #29293d;
   border-top: 1px solid #eaeaea;
   padding-top: 15px;
   padding-bottom: 15px;
-
 }
 
 footer {
@@ -92,5 +91,9 @@ footer ul {
 footer ul li {
   float: left;
   margin-left: 15px;
+}
+
+.listing {
+  list-style: none;
 }
 
