Update all views with categories

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -98,3 +98,13 @@ footer ul li {
   padding-left: 0;
 }
 
+.badge {
+  background-color: rgb(215, 233, 248);
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
+
+.input_checkbox input {
+  width: auto !important
+}
